--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -164,6 +164,12 @@ body {
   font-size: 15px;
 }
 
+.popup__forgetpwd {
+  text-align: right;
+  font-size: 12px;
+  margin-right: 50px;
+}
+
 .agree {
   color:#AEB1B2;
   font-size:;
@@ -334,7 +340,8 @@ body {
 .jumbotron__subheader--error {
   padding-top: 32%;
   font-size: 18px;
-  text-align: left;
+  margin-left: -100px;
+  text-align: center;
 }
 
 .jumbotron {
