--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -587,6 +587,7 @@ body {
   position: relative;
   height: 650px;
 }
+
 .home-method__test-part {
   display: inline-block;
   width: 50%;
@@ -623,6 +624,24 @@ body {
 .home-method__list {
   font-size: 18px;
 }
+
+.home-method__list--analyse {
+  color: #8300CE;
+}
+
+.home-method__list--revise {
+  color: #009858;
+}
+
+.home-method__list--test {
+  color: #FF4949;
+}
+
+.home-method__p {
+  color: #4E4E50;
+}
+
+
 
 .home__button {
   display: block;
@@ -854,8 +873,50 @@ li.active a, li.active a:hover {
 }
 
 .pricing-cart__header {
+  width: 50%;
+  display: inline-block;
   font-size: 32px;
-  color: #747475;
+  color: #747475;  
+}
+
+.pricing-cart__select {
+  text-align: right;
+  display: inline-block;
+}
+
+.pricing-cart__accordion {
+  overflow:hidden;
+  border-radius:5px;
+  background:#4E4E50;
+}
+         
+/*----- Section Titles -----*/
+.pricing-cart__accordion-section-title {
+  width:100%;
+  padding:15px;
+  margin-top: 1px;
+  display:inline-block;
+  border-bottom:1px solid #1a1a1a;
+  background:#333;
+  transition:all linear 0.15s;
+  font-size:1.200em;
+  text-shadow:0px 1px 0px #1a1a1a;
+  text-decoration: none;
+  color:#fff;
+}
+ 
+.pricing-cart__accordion-section-title.active, .pricing-cart__accordion-section-title:hover {
+  background:#4c4c4c;
+  text-decoration:none;
+}
+ 
+.pricing-cart__accordion-section:last-child .pricing-cart__accordion-section-title {
+  border-bottom:none;
+}
+ 
+/*----- Section Content -----*/
+.pricing-cart__accordion-section-content {
+  display:none;
 }
 
 /*
